updated linkedin link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/kien-vinh-chung-534531236/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/kienchung/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/kienvinhchung" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="mailto:kien.vinh.chung@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="tel:+14699968230" class="icon solid fa-phone"><span class="label">TEL</span></a></li>
@@ -674,7 +674,7 @@
 								<!-- deleted class bottom and added class contact_info-->
 								<!-- Social Icons -->
 									<ul class="no-bullets">
-										<li class="contact-info"><a href="https://www.linkedin.com/in/kien-vinh-chung-534531236/" class="icon brands fa-linkedin" target="_blank" style="color: rgb(10,102,194);"><span class="label">LinkedIn</span> LinkedIn : Kien Vinh Chung</a></li>
+										<li class="contact-info"><a href="https://www.linkedin.com/in/kienchung/" class="icon brands fa-linkedin" target="_blank" style="color: rgb(10,102,194);"><span class="label">LinkedIn</span> LinkedIn : Kien Vinh Chung</a></li>
 										<li class="contact-info"><a href="https://github.com/kienvinhchung" class="icon brands fa-github" target="_blank" style="color: rgb(99,31,164);"><span class="label">Github</span> GitHub : kienvinhchung</a></li>
 										<li class="contact-info"><a href="mailto:kien.vinh.chung@gmail.com" class="icon solid fa-envelope" style="color: rgb(222,64,50);"><span class="label">Email</span> Email : kien.vinh.chung@gmail.com</a></li>
 										<li class="contact-info"><a href="tel:+14699968230" class="icon solid fa-phone"style="color: rgb(49,159,79);"><span class="label">TEL</span> TEL : +1(469) 996-8230</a></li>
