--- a/project_h.html
+++ b/project_h.html
@@ -58,7 +58,7 @@
 				<div class="bottom">
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/kien-vinh-chung-534531236/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/kienchung/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/kienvinhchung" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="mailto:kien.vinh.chung@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="tel:+14699968230" class="icon solid fa-phone"><span class="label">TEL</span></a></li>
