new title, checkmark, power bi, microsoft

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
 							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
-							<p>Business Analyst</p>
+							<p>Business Intelligence Data Analyst</p>
+							<p>
+								<span class="fa-solid fa-circle-check fa-bounce" style="color: #2d55e7; animation-duration: 1s;"></span> 
+								<a href="https://kienchung.net/#microsoft_certifications">Microsoft Power BI Certified</a>
+							</p>
 						</div>
 
 					<!-- Nav -->
@@ -53,8 +57,8 @@
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-briefcase">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About</span></a></li>
 								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">Education</span></a></li>
-								<li><a href="#certifications" id="certifications-link"><span class="icon solid fa-certificate">MS Certifications</span></a></li>
-								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-certificate">Certificates</span></a></li>
+								<li><a href="#microsoft_certifications" id="certifications-link"><span class="icon solid fa-circle-check">MS Certifications</span></a></li>
+								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-check">Certificates</span></a></li>
 								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Resumé</span></a></li>
 								<li><a href="#contacts" id="contact-link"><span class="icon solid fa-share-nodes">Contacts</span></a></li>
 								<li><a href="#funfact" id="funfact-link"><span class="icon solid fa-face-smile-wink">Fun Fact</span></a></li>
@@ -422,7 +426,7 @@
 					</section>
 
 				<!-- Certifications -->	
-					<section id="certifications" class="five">
+					<section id="microsoft_certifications" class="five">
 						<br>
 						<div class="container">
 							<header>
@@ -435,29 +439,7 @@
 							</p>
 							<div style="text-align: center; margin-top: 0px;">
 
-
-								<div class="col-4 col-12-mobile" style="display: inline-block; vertical-align: top; width: 39%; margin: 0px 15px 10px 15px;">
-									
-									<article class="item" style="margin-bottom: 5px;">
-										<div>
-											<header style="background-color: rgb(3,100,182);">
-												<h3 style="color: white;">
-													<a href="https://learn.microsoft.com/en-us/certifications/azure-data-fundamentals/" target="_blank">DP-900: <br>Microsoft Azure Data Fundamentals</a>
-												</h3>
-											</header>
-										</div>
-										<a href="images/microsoft/dp900.jpg" target="_blank" class="image fit"><img src="images/microsoft/dp900.jpg" alt="dp900"/></a>
-										<div>
-											<header style="background-color: rgb(255,107,0);">
-												<h3 style="color: white;">
-													<a href="https://www.credly.com/badges/4b0f626b-8dca-4970-b8ca-e5f5adb9d04a/public_url" target="_blank">Verify this certification with Credly here!</a>
-
-												</h3>
-											</header>
-										</div>
-									</article>
-								</div>
-
+								<!-- PL-300 -->
 								<div class="col-4 col-12-mobile" style="display: inline-block; vertical-align: top; width: 39%; margin: 0px 15px 10px 15px;">
 									<article class="item" style="margin-bottom: 5px;">
 										<div>
@@ -478,8 +460,29 @@
 									</article>
 								</div>
 
-							</div>
+								<!-- DP-900 -->
+								<div class="col-4 col-12-mobile" style="display: inline-block; vertical-align: top; width: 39%; margin: 0px 15px 10px 15px;">
+									<article class="item" style="margin-bottom: 5px;">
+										<div>
+											<header style="background-color: rgb(3,100,182);">
+												<h3 style="color: white;">
+													<a href="https://learn.microsoft.com/en-us/certifications/azure-data-fundamentals/" target="_blank">DP-900: <br>Microsoft Azure Data Fundamentals</a>
+												</h3>
+											</header>
+										</div>
+										<a href="images/microsoft/dp900.jpg" target="_blank" class="image fit"><img src="images/microsoft/dp900.jpg" alt="dp900"/></a>
+										<div>
+											<header style="background-color: rgb(255,107,0);">
+												<h3 style="color: white;">
+													<a href="https://www.credly.com/badges/4b0f626b-8dca-4970-b8ca-e5f5adb9d04a/public_url" target="_blank">Verify this certification with Credly here!</a>
 
+												</h3>
+											</header>
+										</div>
+									</article>
+								</div>
+
+							</div>
 						</div>
 					</section>
 
