--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<p>Business Intelligence Data Analyst</p>
 							<p>
 								<span class="fa-solid fa-circle-check fa-bounce" style="color: #2d55e7; animation-duration: 1s;"></span> 
-								<a href="https://kienchung.net/#microsoft_certifications">Microsoft Power BI Certified</a>
+								<a href="#microsoft_certifications">Microsoft Power BI Certified</a>
 							</p>
 						</div>
 
@@ -57,7 +57,7 @@
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-briefcase">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About</span></a></li>
 								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">Education</span></a></li>
-								<li><a href="#microsoft_certifications" id="certifications-link"><span class="icon solid fa-circle-check">MS Certifications</span></a></li>
+								<li><a href="#microsoft_certifications" id="certifications-link"><span class="icon solid fa-circle-check">Microsoft Certifications</span></a></li>
 								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-check">Certificates</span></a></li>
 								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Resumé</span></a></li>
 								<li><a href="#contacts" id="contact-link"><span class="icon solid fa-share-nodes">Contacts</span></a></li>
@@ -101,7 +101,12 @@
 								<a href="#portfolio" class="button scrolly">Explore my Portfolio</a>
 								<br>
 								<br>
-								<a href="#resume">Jump to My Resumé</a>
+								<p>
+									Speed scroll to: <br>
+									<a href="#microsoft_certifications" class="scrolly">Microsoft Certifications</a>
+									<br>
+									<a href="#resume" class="scrolly">My Resumé</a>
+								</p>
 							</footer>
 							<div>
 								<img class="qrcode" src="images/qr_codes/qrcodeB.png" style="padding: 3px;" alt="qr_code">
@@ -371,7 +376,7 @@
 									</article>
 								</div>
 							</div>
-							<p>Click the degree for full size image</p>
+							<p>Click the degree certificate for enlarged image in new browser tab</p>
 							<!-- margin: top right bottom left; -->
 							<div style="text-align: center; margin-top: 0px;">
 								<div class="col-4 col-12-mobile" style="display: inline-block; vertical-align: top; width: 39%; margin: 0px 15px 10px 15px;">
@@ -435,7 +440,7 @@
 							<p>
 								Click the title for certification's detail
 								<br>
-								Click the certification for enlarged image
+								Click the certification for enlarged image in new browser tab
 							</p>
 							<div style="text-align: center; margin-top: 0px;">
 
@@ -453,7 +458,7 @@
 										<div>
 											<header style="background-color: rgb(255,107,0);">
 												<h3 style="color: white;">
-													<a  target="_blank">Verify this certification with Credly here!</a>
+													<a  target="_blank">Verify this certification with Credly here</a>
 												</h3>
 											</header>
 										</div>
@@ -474,7 +479,7 @@
 										<div>
 											<header style="background-color: rgb(255,107,0);">
 												<h3 style="color: white;">
-													<a href="https://www.credly.com/badges/4b0f626b-8dca-4970-b8ca-e5f5adb9d04a/public_url" target="_blank">Verify this certification with Credly here!</a>
+													<a href="https://www.credly.com/badges/4b0f626b-8dca-4970-b8ca-e5f5adb9d04a/public_url" target="_blank">Verify this certification with Credly here</a>
 
 												</h3>
 											</header>
@@ -644,10 +649,14 @@
 						<header>
 							<h2>Resumé</h2>
 						</header>
-						<p>Click the image to view/print the PDF file in Google Drive</p>
+						<p>
+							Click the resumé for enlarged image in new browser tab<br>
+							OR <br>
+							<a href="https://drive.google.com/file/d/1Mn5-rH2gK4wRqbHfxk-lgGEMsUBKeYaz/view?usp=share_link" target="_blank">View printable PDF via Google Drive</a>
+						</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
-								<a href="https://drive.google.com/file/d/1Mn5-rH2gK4wRqbHfxk-lgGEMsUBKeYaz/view?usp=share_link" target="_blank"><img src="images/resume/Kien_Chung_Resume.png" alt="kien_chung_data_analyst_resume" class="image fit"/></a>
+								<a href="images/resume/Kien_Chung_Resume.png" target="_blank" class="image fit"><img src="images/resume/Kien_Chung_Resume.png" alt="kien_chung_data_analyst_resume"/></a>
 								<!-- href="images/resume/KienVinhChung_GoogleCertified_DataAnalyst.pdf" -->
 							</div>
 								<!--
