--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<p>Business Intelligence Data Analyst</p>
 							<p>
 								<span class="fa-solid fa-circle-check fa-bounce" style="color: #2d55e7; animation-duration: 1s;"></span> 
-								<a href="#microsoft_certifications">Microsoft Power BI Certified</a>
+								<a href="#microsoft_certifications">Microsoft&reg; Power BI Certified</a>
 							</p>
 						</div>
 
@@ -58,7 +58,7 @@
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About</span></a></li>
 								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">Education</span></a></li>
 								<li><a href="#microsoft_certifications" id="certifications-link"><span class="icon solid fa-circle-check">Microsoft Certifications</span></a></li>
-								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-check">Certificates</span></a></li>
+								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-check">Certificates of Completion</span></a></li>
 								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Resumé</span></a></li>
 								<li><a href="#contacts" id="contact-link"><span class="icon solid fa-share-nodes">Contacts</span></a></li>
 								<li><a href="#funfact" id="funfact-link"><span class="icon solid fa-face-smile-wink">Fun Fact</span></a></li>
@@ -71,6 +71,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
+							<li><a href="https://learn.microsoft.com/en-us/users/kienchung-3610/" class="icon brands fa-microsoft" target="_blank"><span class="label">Microsoft</span></a></li>
 							<li><a href="https://www.linkedin.com/in/kienchung/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/kienvinhchung" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="mailto:kien.vinh.chung@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -103,7 +104,7 @@
 								<br>
 								<p>
 									Speed scroll to: <br>
-									<a href="#microsoft_certifications" class="scrolly">Microsoft Certifications</a>
+									<a href="#microsoft_certifications" class="scrolly">Microsoft&reg; Certifications</a>
 									<br>
 									<a href="#resume" class="scrolly">My Resumé</a>
 								</p>
@@ -430,12 +431,13 @@
 						<br>
 					</section>
 
-				<!-- Certifications -->	
+				<!-- Microsoft Certifications -->	
 					<section id="microsoft_certifications" class="five">
 						<br>
 						<div class="container">
 							<header>
-								<h2>Microsoft Certifications</h2>
+								<h2>Professional Microsoft&reg; Certifications</h2>
+								<h3>Protored Exams by Microsoft&reg;</h3>
 							</header>
 							<p>
 								Click the title for certification's detail
@@ -686,11 +688,12 @@
 								<!-- deleted class bottom and added class contact_info-->
 								<!-- Social Icons -->
 									<ul class="no-bullets">
-										<li class="contact-info"><a href="https://www.linkedin.com/in/kienchung/" class="icon brands fa-linkedin" target="_blank" style="color: rgb(10,102,194);"><span class="label">LinkedIn</span> LinkedIn : Kien Vinh Chung</a></li>
-										<li class="contact-info"><a href="https://github.com/kienvinhchung" class="icon brands fa-github" target="_blank" style="color: rgb(99,31,164);"><span class="label">Github</span> GitHub : kienvinhchung</a></li>
-										<li class="contact-info"><a href="mailto:kien.vinh.chung@gmail.com" class="icon solid fa-envelope" style="color: rgb(222,64,50);"><span class="label">Email</span> Email : kien.vinh.chung@gmail.com</a></li>
-										<li class="contact-info"><a href="tel:+14699968230" class="icon solid fa-phone"style="color: rgb(49,159,79);"><span class="label">TEL</span> TEL : +1(469) 996-8230</a></li>
-										<li class="contact-info"><a href="sms:+14699968230" class="icon solid fa-comments" style="color: rgb(238,179,11);"><span class="label">SMS</span> SMS : +1(469) 996-8230</a></li>
+										<li class="contact-info"><a href="https://learn.microsoft.com/en-us/users/kienchung-3610/" class="icon brands fa-microsoft" target="_blank" style="color: rgb(0,164,239);"><span class="label">Microsoft</span> Microsoft&reg;: Kien Chung</a></li>
+										<li class="contact-info"><a href="https://www.linkedin.com/in/kienchung/" class="icon brands fa-linkedin" target="_blank" style="color: rgb(10,102,194);"><span class="label">LinkedIn</span> LinkedIn&reg;: Kien Vinh Chung</a></li>
+										<li class="contact-info"><a href="https://github.com/kienvinhchung" class="icon brands fa-github" target="_blank" style="color: rgb(99,31,164);"><span class="label">Github</span> GitHub&reg;: kienvinhchung</a></li>
+										<li class="contact-info"><a href="mailto:kien.vinh.chung@gmail.com" class="icon solid fa-envelope" style="color: rgb(222,64,50);"><span class="label">Email</span> Email: kien.vinh.chung@gmail.com</a></li>
+										<li class="contact-info"><a href="tel:+14699968230" class="icon solid fa-phone"style="color: rgb(49,159,79);"><span class="label">TEL</span> TEL: +1(469) 996-8230</a></li>
+										<li class="contact-info"><a href="sms:+14699968230" class="icon solid fa-comments" style="color: rgb(238,179,11);"><span class="label">SMS</span> SMS: +1(469) 996-8230</a></li>
 									</ul>
 			
 							</div>
