--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
 							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
-							<p>Business Intelligence Data Analyst</p>
+							<p>Business Intelligence <br>Data Analyst</p>
 							<p>
 								<span class="fa-solid fa-circle-check fa-bounce" style="color: #2d55e7; animation-duration: 1s;"></span> 
 								<a href="#microsoft_certifications">Microsoft&reg; Power BI Certified</a>
