--- a/project_one.html
+++ b/project_one.html
@@ -39,7 +39,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
 							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
-							<p>Data Science - Data Analyst</p>
+							<p>Business Intelligence <br>Data Analyst</p>
 						</div>
 					<!-- Nav -->
 						<nav id="nav">
