--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 						<p>
 							Click the resumé for enlarged image in new browser tab<br>
 							OR <br>
-							<a href="https://drive.google.com/file/d/1Mn5-rH2gK4wRqbHfxk-lgGEMsUBKeYaz/view?usp=share_link" target="_blank">View printable PDF via Google Drive</a>
+							<a href="https://drive.google.com/file/d/1_GKCeSUngsr93YbxU_S5QqDE0WVKBjqw/view?usp=sharing" target="_blank">View printable PDF via Google Drive</a>
 						</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
