--- a/index.html
+++ b/index.html
@@ -654,11 +654,11 @@
 						<p>
 							Click the resumé for enlarged image in new browser tab<br>
 							OR <br>
-							<a href="https://drive.google.com/file/d/1_GKCeSUngsr93YbxU_S5QqDE0WVKBjqw/view?usp=sharing" target="_blank">View printable PDF via Google Drive</a>
+							<a href="https://drive.google.com/file/d/1_GKCeSUngsr93YbxU_S5QqDE0WVKBjqw/view?usp=sharing" target="_blank">Click here to view printable PDF via Google Drive</a>
 						</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
-								<a href="images/resume/Kien_Chung_Resume.png" target="_blank" class="image fit"><img src="images/resume/Kien_Chung_Resume.png" alt="kien_chung_data_analyst_resume"/></a>
+								<a href="images/resume/KienChungAnalystResume.png" target="_blank" class="image fit"><img src="images/resume/KienChungAnalystResume.png" alt="KienChungAnalystResume"/></a>
 								<!-- href="images/resume/KienVinhChung_GoogleCertified_DataAnalyst.pdf" -->
 							</div>
 								<!--
