new microsoft certification

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 										<a href="images/education/BachelorsDegree.jpg" target="_blank" class="image fit"><img src="images/education/BachelorsDegree.jpg" alt="bachelors_degree"/></a>
 										<div>
 											<header style="background-color: rgb(160,39,55);">
-												<ul class="no-bullets" style="display: inline; color: white;"><strong style="font-weight: bold; color: white;">- Minored -</strong>
+												<ul class="no-bullets" style="display: inline; color: white;"><strong style="font-weight: bold; color: white;">- Minors -</strong>
 													<li>Business Administration</li>
 													<li>Mathematics</li>
 												</ul>
@@ -438,7 +438,8 @@
 							<header>
 								<h2>Professional Microsoft&reg; Certifications</h2>
 								<h3>Proctored Exams by Microsoft&reg;</h3>
-								<h4><a href="https://learn.microsoft.com/en-us/users/kienchung-3610/transcript/71ke2uljrre4kwg" target="_blank">View official transcript here</a></h4>
+								<h4><a href="https://learn.microsoft.com/en-us/users/kienchung-3610/transcript/vjjz0f422poem6q" target="_blank">View official transcript here</a></h4>
+								<h4>MCID: 994846777</h4>
 							</header>
 							<p>
 								Click the title for certification's detail
@@ -457,11 +458,11 @@
 												</h3>
 											</header>
 										</div>
-										<a  target="_blank" class="image fit"><img src="images/microsoft/pl300.jpg" alt="pl300"/></a>
+										<a href="images/microsoft/pl300.png" target="_blank" class="image fit"><img src="images/microsoft/pl300.png" alt="pl300"/></a>
 										<div>
 											<header style="background-color: rgb(255,107,0);">
 												<h3 style="color: white;">
-													<a  target="_blank">Verify this certification with Credly here</a>
+													<a href="https://learn.microsoft.com/api/credentials/share/en-us/KienChung-3610/1EF97B3AEE73553A" target="_blank">PL-300 Verification Link</a>
 												</h3>
 											</header>
 										</div>
@@ -478,12 +479,11 @@
 												</h3>
 											</header>
 										</div>
-										<a href="images/microsoft/dp900.jpg" target="_blank" class="image fit"><img src="images/microsoft/dp900.jpg" alt="dp900"/></a>
+										<a href="images/microsoft/dp900.png" target="_blank" class="image fit"><img src="images/microsoft/dp900.png" alt="dp900"/></a>
 										<div>
 											<header style="background-color: rgb(255,107,0);">
 												<h3 style="color: white;">
-													<a href="https://www.credly.com/badges/4b0f626b-8dca-4970-b8ca-e5f5adb9d04a/public_url" target="_blank">Verify this certification with Credly here</a>
-
+													<a href="https://learn.microsoft.com/en-us/users/kienchung-3610/credentials/841371358dd2a1f2" target="_blank">DP-900 Verification Link</a> || <a href="https://www.credly.com/badges/4b0f626b-8dca-4970-b8ca-e5f5adb9d04a/public_url" target="_blank">Credly Badge</a>
 												</h3>
 											</header>
 										</div>
