--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About</span></a></li>
 								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">Education</span></a></li>
 								<li><a href="#microsoft_certifications" id="certifications-link"><span class="icon solid fa-circle-check">Microsoft Certifications</span></a></li>
-								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-check">Certificates of Completion</span></a></li>
+								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-check">Certificate of Completion</span></a></li>
 								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Resumé</span></a></li>
 								<li><a href="#contacts" id="contact-link"><span class="icon solid fa-share-nodes">Contacts</span></a></li>
 								<li><a href="#funfact" id="funfact-link"><span class="icon solid fa-face-smile-wink">Fun Fact</span></a></li>
@@ -499,7 +499,7 @@
 						<br>
 						<div class="container">
 							<header>
-								<h2>Certificates of Completion</h2>
+								<h2>Certificate of Completion</h2>
 							</header>
 
 							<p>Click the certificate for verification</p>
