correct grammar and add scroll function

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<p>Business Intelligence <br>Data Analyst</p>
 							<p>
 								<span class="fa-solid fa-circle-check fa-bounce" style="color: #2d55e7; animation-duration: 1s;"></span> 
-								<a href="#microsoft_certifications">Microsoft&reg; Power BI Certified</a>
+								<a href="#microsoft_certifications" class="scrolly">Microsoft&reg; Power BI Certified</a>
 							</p>
 						</div>
 
@@ -104,7 +104,7 @@
 								<br>
 								<p>
 									Speed scroll to: <br>
-									<a href="#microsoft_certifications" class="scrolly">Microsoft&reg; Certifications</a>
+									<a href="#microsoft_certifications" class="scrolly">Microsoft&reg; Certification</a>
 									<br>
 									<a href="#resume" class="scrolly">My Resumé</a>
 								</p>
