--- a/index.html
+++ b/index.html
@@ -655,11 +655,11 @@
 						<p>
 							Click the resumé for enlarged image in new browser tab<br>
 							OR <br>
-							<a href="https://drive.google.com/file/d/1GtuE0OD5s1u0eFrAfR952dP3RGHh9WnS/view?usp=sharing" target="_blank">Click here to view printable PDF via Google Drive</a>
+							<a href="https://drive.google.com/file/d/1WF_3tN1S4pM8qqn3hTLs08W2kJACR_vr/view?usp=sharing" target="_blank">Click here to view printable PDF via Google Drive</a>
 						</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
-								<a href="images/resume/KienChung_Resume.png" target="_blank" class="image fit"><img src="images/resume/KienChung_Resume.png" alt="KienChungAnalystResume"/></a>
+								<a href="images/resume/KienChung_Resume_Analyst.png" target="_blank" class="image fit"><img src="images/resume/KienChung_Resume_Analyst.png" alt="KienChung_Resume_Analyst"/></a>
 								<!-- href="images/resume/KienVinhChung_GoogleCertified_DataAnalyst.pdf" -->
 							</div>
 								<!--
