--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
 						</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
-								<a href="images/resume/KienChung_Resume_Analyst.png" target="_blank" class="image fit"><img src="images/resume/KienChung_Resume_Analyst.png" alt="KienChung_Resume_Analyst"/></a>
+								<a href="images/resume/KienChung_Resume_Analyst.jpg" target="_blank" class="image fit"><img src="images/resume/KienChung_Resume_Analyst.jpg" alt="KienChung_Resume_Analyst"/></a>
 								<!-- href="images/resume/KienVinhChung_GoogleCertified_DataAnalyst.pdf" -->
 							</div>
 								<!--
