--- a/index.html
+++ b/index.html
@@ -129,9 +129,44 @@
 							<br>
 							<h3>- Data Analysis Projects -</h3>
 							<br>
+
 							<!-- First Section -->
 							<div class="row">
 								<!-- Row 1 -->
+								<!-- 1 -->
+								<div class="col-4 col-12-mobile">
+								</div>
+
+								<br><br>
+
+								<!-- 2 -->
+								<div class="col-4 col-12-mobile">
+									<article class="item" style="margin-bottom: 5px;">
+										<a href="project_zero.html" class="image fit"><img src="images/project_0_van_arsdel/van_arsdel.jpg" alt="Van Arsdel Power BI" /></a>
+										<header style="background-color: rgb(68,68,68);">
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 0 (In Progress)</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Van Arsdel Manufacturing Company <br>Sales Revenue & Market Share Analysis</strong></h3>
+										</header>
+									</article>
+									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Utilizing -</strong>
+										<li>Power BI Desktop</li>
+										<li>Power BI Web Service</li>
+										<li>PowerQuery, DAX, Time Inteligence</li>
+									</ul>
+								</div>
+
+								<br><br>
+
+								<!-- 3 -->
+								<div class="col-4 col-12-mobile">
+								</div>
+
+							</div>
+
+							<br>
+
+							<div class="row">
+								<!-- Row 2 -->
 								<!-- 1 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
@@ -173,8 +208,8 @@
 									<article class="item" style="margin-bottom: 5px;">
 										<a href="project_three.html" class="image fit"><img src="images/project_3_ibm_c5_python/temp_pic.jpg" alt="python_project" /></a>
 										<header style="background-color: rgb(68,68,68);">
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 3 (Coming)</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Data Analysis & Visualization <br>with Python Project</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 3 (Coming soon)</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Data Analytics <br>Python Project</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Utilizing -</strong>
