--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Utilizing -</strong>
-										<li>Power BI Desktop</li>
-										<li>Power BI Web Service</li>
-										<li>PowerQuery, DAX, Time Inteligence</li>
+										<li>Power BI Desktop, Web Service, Mobile</li>
+										<li>Business Intelligence, DAX</li>
+										<li>PowerQuery, Time Inteligence</li>
 									</ul>
 								</div>
 
