--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-briefcase">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About</span></a></li>
 								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">Education</span></a></li>
-								<li><a href="#microsoft_certifications" id="certifications-link"><span class="icon solid fa-circle-check">Microsoft Certifications</span></a></li>
+								<li><a href="#microsoft_certifications" id="certifications-link"><span class="icon solid fa-circle-check">Microsoft Certification</span></a></li>
 								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-check">Certificate of Completion</span></a></li>
 								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Resumé</span></a></li>
 								<li><a href="#contacts" id="contact-link"><span class="icon solid fa-share-nodes">Contacts</span></a></li>
@@ -71,7 +71,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://learn.microsoft.com/en-us/users/kienchung-3610/" class="icon brands fa-microsoft" target="_blank"><span class="label">Microsoft</span></a></li>
+							<li><a href="https://learn.microsoft.com/en-us/users/kienchung-3610/transcript/vjjz0f422poem6q" class="icon brands fa-microsoft" target="_blank"><span class="label">Microsoft</span></a></li>
 							<li><a href="https://www.linkedin.com/in/kienchung/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/kienvinhchung" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="mailto:kien.vinh.chung@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -471,8 +471,8 @@
 						<br>
 						<div class="container">
 							<header>
-								<h2>Professional Microsoft&reg; Certifications</h2>
-								<h3>Proctored Exams by Microsoft&reg;</h3>
+								<h2>Professional Microsoft&reg; Certification</h2>
+								<h3>Proctored Exam by Microsoft&reg;</h3>
 								<h4><a href="https://learn.microsoft.com/en-us/users/kienchung-3610/transcript/vjjz0f422poem6q" target="_blank">View official transcript here</a></h4>
 								<h4>MCID: 994846777</h4>
 							</header>
@@ -489,7 +489,7 @@
 										<div>
 											<header style="background-color: rgb(3,100,182);">
 												<h3 style="color: white;">
-													<a href="https://learn.microsoft.com/en-us/certifications/power-bi-data-analyst-associate/" target="_blank">PL-300: <br>Microsoft Power BI Data Analyst Associate</a>
+													<a href="https://learn.microsoft.com/en-us/certifications/power-bi-data-analyst-associate/" target="_blank">Microsoft Power BI Data Analyst Associate <br>(PL-300)</a>
 												</h3>
 											</header>
 										</div>
@@ -510,7 +510,7 @@
 										<div>
 											<header style="background-color: rgb(3,100,182);">
 												<h3 style="color: white;">
-													<a href="https://learn.microsoft.com/en-us/certifications/azure-data-fundamentals/" target="_blank">DP-900: <br>Microsoft Azure Data Fundamentals</a>
+													<a href="https://learn.microsoft.com/en-us/certifications/azure-data-fundamentals/" target="_blank">Microsoft Azure Data Fundamentals <br>(DP-900)</a>
 												</h3>
 											</header>
 										</div>
