--- a/project_one.html
+++ b/project_one.html
@@ -58,6 +58,7 @@
 				<div class="bottom">
 					<!-- Social Icons -->
 						<ul class="icons">
+							<li><a href="https://learn.microsoft.com/en-us/users/kienchung-3610/transcript/vjjz0f422poem6q" class="icon brands fa-microsoft" target="_blank"><span class="label">Microsoft</span></a></li>
 							<li><a href="https://www.linkedin.com/in/kienchung/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/kienvinhchung" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="mailto:kien.vinh.chung@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
