--- a/project_zero.html
+++ b/project_zero.html
@@ -100,6 +100,7 @@
 
 						<header>
 							<h2>Reports</h2>
+							<p>(Slideshow)</p>
 						</header>
 
 						<!-- Container for the image gallery -->
@@ -186,6 +187,7 @@
                     <div class="container">
                         <header>
 							<h2>Sales Revenue 2014-2021</h2>
+							<p>(Video-Autoplay-Loop)</p>
 						</header>
 						<video style="border: 5px solid black; width: 100%;" width="100%" controls autoplay loop>
 							<source src="images/project_0_van_arsdel/power_bi/sales_revenue.mov" type="video/mp4">
