--- a/index.html
+++ b/index.html
@@ -135,16 +135,10 @@
 								<!-- Row 1 -->
 								<!-- 1 -->
 								<div class="col-4 col-12-mobile">
-								</div>
-
-								<br><br>
-
-								<!-- 2 -->
-								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
 										<a href="project_zero.html" class="image fit"><img src="images/project_0_van_arsdel/van_arsdel.jpg" alt="Van Arsdel Power BI" /></a>
 										<header style="background-color: rgb(68,68,68);">
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 0 (In Progress)</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">PROJECT ZERO</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Van Arsdel Manufacturing Company <br>Sales Revenue & Market Share Analysis</strong></h3>
 										</header>
 									</article>
@@ -157,22 +151,12 @@
 
 								<br><br>
 
-								<!-- 3 -->
-								<div class="col-4 col-12-mobile">
-								</div>
-
-							</div>
-
-							<br>
-
-							<div class="row">
-								<!-- Row 2 -->
-								<!-- 1 -->
+								<!-- 2 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
 										<a href="project_one.html" class="image fit"><img src="images/project_1_bike/bike.jpg" alt="cyclisticbike_project" /></a>
 										<header style="background-color: rgb(68,68,68);">
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 1</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">PROJECT ONE</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Cyclistic Bike-share <br>Marketing Analysis</strong></h3>
 										</header>
 									</article>
@@ -182,33 +166,15 @@
 										<li>R Markdown</li>
 									</ul>
 								</div>
-
-								<br><br>
-
-								<!-- 2 -->
-								<div class="col-4 col-12-mobile">
-									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_two.html" class="image fit"><img src="images/project_2_bellabeat/bellabeat.jpg" alt="bellabeat_project" /></a>
-										<header style="background-color: rgb(68,68,68);">
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 2 (In Progress)</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Bellabeat Smart Wellness <br>Product Analysis</strong></h3>
-										</header>
-									</article>
-									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Utilizing -</strong>
-										<li>SQL</li>
-										<li>Google BigQuery</li>
-										<li>Tableau</li>
-									</ul>
-								</div>
-
+								
 								<br><br>
 
 								<!-- 3 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_three.html" class="image fit"><img src="images/project_3_ibm_c5_python/temp_pic.jpg" alt="python_project" /></a>
+										<a href="project_two.html" class="image fit"><img src="images/project_2_python/temp_pic.jpg" alt="python_project" /></a>
 										<header style="background-color: rgb(68,68,68);">
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 3 (Coming soon)</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">PROJECT TWO (Coming soon)</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Data Analytics <br>Python Project</strong></h3>
 										</header>
 									</article>
