--- a/project_zero.html
+++ b/project_zero.html
@@ -76,9 +76,41 @@
                     <div class="container">
                         <header>
 							<h2>About this project</h2>
-							<h3></h3>
 							<br>
-							<h4>...</h4>
+							<br>
+							<div style="text-align: left;">
+								<h3>Company</h3>
+								<p>
+									Van Arsdel Manufacturing Company
+									<br>
+									<i style="font-size: 14pt;">
+										The company manufactures expensive retail products that can be used for recreational as well as profesional purposes, 
+										and they sells their products directly to consumers nationwide.
+									</i>
+								</p>
+								<h3>Audience</h3>
+								<p>Chief Marketing Officer (CMO)</p>
+								<h3>Project</h3>
+								<p>Sales Revenue & Market Share Analysis</p>
+								<h3>Objectives</h3>
+								<p>
+									Internal: company's performance (how well do our products sell).
+									<br>
+									External: company's market share (how well do we do against competing products/manufacturers).
+								</p>
+								<h3>Scope of Works (Updating...)</h3>
+								<p>
+									<a href="#dashboard" class="scrolly">dashboard</a>
+									<br>
+									<a href="#reports" class="scrolly">reports</a>
+									<br>
+									<a href="#salesanimation" class="scrolly">sales revenue in the past 7 years</a>
+									<br>
+									<a href="#marketshare" class="scrolly">market share</a>
+									<br>
+									<a href="#datamodeling" class="scrolly">data model</a>
+								</p>
+							</div>
                         </header>
 						
                     </div>
@@ -208,7 +240,7 @@
 				<!-- ... -->
 				<section id="add" class="eight">
 					<div class="container">
-						
+						<h2>- End of Project -</h2>
 					</div>
 				</section>
 
