--- a/index.html
+++ b/index.html
@@ -656,11 +656,11 @@
 						<p>
 							Click the resumé for enlarged image in new browser tab<br>
 							OR <br>
-							<a href="https://drive.google.com/file/d/1bhyjEYW-q0z8KmquQgCdXTZUM2921x7_/view?usp=sharing" target="_blank">Click here to view printable PDF via Google Drive</a>
+							<a href="https://drive.google.com/file/d/1mrI1MtPGfocDhKRgVRIp5uFo6KqLPe3N/view?usp=sharing" target="_blank">Click here to view printable PDF via Google Drive</a>
 						</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
-								<a href="images/resume/KienChung_AnalystResume.jpg" target="_blank" class="image fit"><img src="images/resume/KienChung_AnalystResume.jpg" alt="KienChung_AnalystResume"/></a>
+								<a href="images/resume/KienChungCV.png" target="_blank" class="image fit"><img src="images/resume/KienChungCV.png" alt="KienChungCV"/></a>
 								<!-- href="images/resume/KienVinhChung_GoogleCertified_DataAnalyst.pdf" -->
 							</div>
 								<!--
